Update MD5 Method

--- a/FSImageDownloader/FSImageDownloader/Base.lproj/Main.storyboard
+++ b/FSImageDownloader/FSImageDownloader/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         </view>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="Cell" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ShotCell" rowHeight="80" id="J4C-OS-sJU" customClass="ShotCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="80" id="J4C-OS-sJU" customClass="ShotCell">
                                 <rect key="frame" x="0.0" y="46" width="320" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J4C-OS-sJU" id="NbE-G0-2e4">
